Refactor: Rename files and update login styling
Renomeado 'pagina.css' para 'index.css' e 'pagina.html' para 'index.html' para melhor padronização.
Também atualizado o CSS e HTML do Login para um novo design.

--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
-  <!-- Conectar o arquivo CSS aqui -->
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -35,7 +34,7 @@
         </div>
 
         <!-- Botão como link -->
-        <a href="pagina.html" class="btn-primary" role="button">Entrar</a>
+        <a href="index.html" class="btn-primary" role="button">Entrar</a>
 
         <div class="status success" aria-live="polite"></div>
       </form>
